@@ -59,6 +59,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1087" tool="jira">
+                    <description>
+						Fixed problem with incorrect initialization code for byte arrays.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Michael Pliskin</name>
+                        <email>pl@tepkom.ru/email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061008</date>
+                </bug>
                 <bug id="1181" tool="jira">
                     <description>
 						Fixed problem with code generation for attributes that are restricted.
